--- a/index.html
+++ b/index.html
@@ -4,62 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Web IDE</title>
-    <style>
-    	body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-    padding: 20px;
-    background-color: #f5f5f5;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1200px;
-    margin-bottom: 20px;
-}
-
-.editor {
-    flex: 1;
-    margin: 0 10px;
-}
-
-textarea {
-    width: 100%;
-    height: 300px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: none;
-    font-family: monospace;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    border-radius: 4px;
-}
-
-button:hover {
-    background-color: #0056b3;
-}
-
-.output {
-    width: 100%;
-    height: 500px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -77,17 +22,9 @@ button:hover {
         </div>
     </div>
     <button onclick="runCode()">Run Code</button>
+    <button onclick="generatePreviewLink()">Generate Preview Link</button>
+    <input type="text" id="previewLink" readonly>
     <iframe id="output" class="output"></iframe>
-    <script>
-    	function runCode() {
-    const htmlCode = document.getElementById("htmlCode").value;
-    const cssCode = `<style>${document.getElementById("cssCode").value}</style>`;
-    const jsCode = `<script>${document.getElementById("jsCode").value}<\/script>`;
-
-    const output = document.getElementById("output");
-    output.contentDocument.body.innerHTML = htmlCode + cssCode + jsCode;
-}
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
